[package]
name = "logical"
version = "0.2.0"
authors = ["Marcel Hellwig <git@cookiesoft.de>"]
description = "Library for simulating digital circuit networks."
documentation = "https://docs.rs/logical"
homepage = "https://github.com/hellow554/logical-rs"
repository = "https://github.com/hellow554/logical-rs"
readme = "README.md"
categories = ["ieee1164", "circuit-simulator"]
license = "GPL-3.0"
edition = "2018"

[lib]
name = "logical"

[badges]
travis-ci = { repository = "hellow554/logical-rs" }

[dependencies]
chrono = "0.4"